feat: add new feature

--- a/demo/src/components/Category.less
+++ b/demo/src/components/Category.less
@@ -1,6 +1,5 @@
 .category {
   &-list {
-    list-style: none;
     padding-right: 20px;
     li {
       width: 200px;
@@ -16,5 +15,12 @@
         transform: scale(1.2)
       }
     }
+  }
+  &-tips {
+    position: absolute;
+    bottom: 10px;
+    left: 30px;
+    font-size: 12px;
+    color: #ccc;
   }
 }
