--- a/demo/src/components/PreviewImage.less
+++ b/demo/src/components/PreviewImage.less
@@ -1,12 +1,39 @@
 .preview-image{
   display: flex;
+  width: 100vw;
+  height: 100vh;
   background: #000;
+  overflow: hidden;
   &__left {
-    width: 40%;
+    width: 20%;
     height: 100vh;
     border-right: 1px solid #ccc;
   }
   &__right {
-    width: 60%;
+    width: 80%;
+    overflow-y: auto;
+    .content {
+      padding: 10px 40px;
+      ul {
+        // display: flex;
+        // flex-wrap: wrap;
+        // align-items: center;
+        column-count: 4;
+        // column-gap: 4px;
+      }
+      li {
+        width: 250px;
+        // height: 250px;
+        margin: 20px;
+        border: 1px solid #ccc;
+        background: #0f0;
+      }
+    }
+    img {
+      display: block;
+      width: 100%;
+      // height: 100%;
+      // object-fit: scale-down;
+    }
   }
 }
