feat(*): finish first tab

--- a/src/components/Content.less
+++ b/src/components/Content.less
@@ -1,21 +1,31 @@
 .content {
-  padding: 10px 40px;
+  padding: 10px 24px;
   @media screen and ( min-width : 1500px) {
     ul {
-      column-count: 6;
+      column-count: 6
     }
   }
   @media screen and ( max-width : 1500px) {
     ul {
-      column-count: 5;
+      column-count: 5
+    }
+  }
+  @media screen and ( max-width : 1300px) {
+    ul {
+      column-count: 4;
     }
   }
   @media screen and ( max-width : 1024px) {
     ul {
+      column-count: 3;
+    }
+  }
+  @media screen and ( max-width : 800px) {
+    ul {
       column-count: 2;
     }
   }
-  @media screen and ( max-width : 400px) {
+  @media screen and ( max-width : 500px) {
     ul {
       column-count: 1;
     }
